src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>MX_WF_Fecha_de_publicacion__c</fullName>
        <description>Fecha de publicación de promoción</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de publicación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Formula_tipo_de_registro_txt__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fórmula tipo de registro txt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Generador_responsable_de_base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de búsqueda relacionado con contacto.</description>
        <label>Generador responsable de base</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.GBL_WF_Funcion__c</field>
                <operation>equals</operation>
                <value>Generador</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Usuarios</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campañas</relationshipLabel>
        <relationshipName>Campa_as</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_ID_agencia__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID agencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_La_oferta_Wallet_es_destacada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>La oferta Wallet es destacada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Legales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legales</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WF_MSI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación wf. Permite informar cuando la promoción contiene el beneficio de meses sin intereses de esa forma poder informarlo en los canales relacionados para que Datio pueda ejecutar los jobs que corresponden con el beneficio.</description>
        <label>MSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Necesita_aprobaci_n_de_Squad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Necesita aprobación de Squad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Numero_de_Briefs_no_cancelados__c</fullName>
        <label>Número de Briefs no cancelados</label>
        <summaryFilterItems>
            <field>CRM_WF_Brief__c.CRM_WF_Etapa_Brief__c</field>
            <operation>notEqual</operation>
            <value>Cancelado</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Brief__c.CRM_WF_Campana_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_WF_Numero_de_cartas_origen_no_cancela__c</fullName>
        <label>Número de cartas origen no canceladas</label>
        <summaryFilterItems>
            <field>CRM_WF_Cartas_Origen__c.CRM_WF_Etapa_Carta_Custodia__c</field>
            <operation>notEqual</operation>
            <value>Rechazada, Cancelada</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Cartas_Origen__c.CRM_WF_Campana_Carta_Custodia__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_WF_Puntos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación wf. Permite informar cuando la promoción contiene el beneficio de Puntos BBVA de esa forma poder informarlo en los canales relacionados para que Datio pueda ejecutar los jobs que corresponden con el beneficio.</description>
        <label>Puntos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Regalo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación wf. Permite informar cuando la promoción contiene el beneficio de Regalo  de esa forma poder informarlo en los canales relacionados para que Datio pueda ejecutar los jobs que corresponden con el beneficio.</description>
        <label>Regalo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Skip_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación wf. Permite informar cuando la promoción contiene el beneficio de Skip payment  de esa forma poder informarlo en los canales relacionados para que Datio pueda ejecutar los jobs que corresponden con el beneficio.</description>
        <label>Skip Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_URL_Mundo_TDC__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para especificar la url de  mundo tdc cuando se elige el canal mundo tdc en el tipo de registro de Alianzas Comerciales</description>
        <encryptionScheme>None</encryptionScheme>
        <label>URL de mundo tdc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_WF_URL_del_legal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL del legal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_WF_Wallet_banner__c</fullName>
        <formula>IF( AND(
        OR(
            INCLUDES( CRM_WF_Canales_de_Comunicacion__c , &quot;BBVA Wallet&quot;) ,
            INCLUDES( MX_WF_Canales_Comunicacion_no_Dirigida__c  , &quot;BBVA Wallet&quot;)
           ),
         MX_WF_La_oferta_Wallet_es_destacada__c
        ),
   TRUE, FALSE
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requiere_Checklist__c</fullName>
        <label>¿Requiere Checklist?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                    <default>true</default>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AccountCampaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>cond__campaign_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.cond__AccountCampaign_Campaign</value>
        </filters>
        <label>AccountCampaign</label>
        <sharedTo>
            <roleAndSubordinates>CRM_WF_Squad_Pyme</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alianzas</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CRM_WF_Prioridad_del__c</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CRM_WF_Alianzas_Comerciales</value>
        </filters>
        <label>Alianzas</label>
    </listViews>
    <listViews>
        <fullName>Alianzas_en_VoBo_Implementacion</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Requiere_Checklist__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CRM_WF_Alianzas_Comerciales</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Vo.Bo. Implementación</value>
        </filters>
        <label>Alianzas en VoBo Implementación</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campa_as_Squad</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CRM_WF_Prioridad_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CRM_WF_Squad</value>
        </filters>
        <label>Campañas Squad</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Inactive</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Campaign Inactive</label>
    </listViews>
    <listViews>
        <fullName>Campanas_Squad_en_VoBo_Implementacion</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Requiere_Checklist__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CRM_WF_Squad</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Vo.Bo. Implementación</value>
        </filters>
        <label>Campañas Squad en VoBo Implementación</label>
    </listViews>
    <!--
    <listViews>
        <fullName>Campanas_Squad_en_VoBo_Implementacion</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Requiere_Checklist__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Requiere_Checklist__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CRM_WF_Alianzas_Comerciales</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Vo.Bo. Implementación</value>
        </filters>
        <label>Alianzas en VoBo Implementación</label>
    </listViews> -->
    <listViews>
        <fullName>MX_WF_Todos</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CRM_WF_FIC__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <label>Todas</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>BHI_Campaign</fullName>
        <active>true</active>
        <label>Campañas BHI</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_WF_Alianzas_Comerciales</fullName>
        <active>true</active>
        <label>Alianzas Comerciales</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_WF_Campana_Multipromocion</fullName>
        <active>true</active>
        <label>Multipromoción</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_WF_Implementacion</fullName>
        <active>true</active>
        <label>Implementación</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_WF_No_Squad</fullName>
        <active>true</active>
        <label>No Squad</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_WF_Squad</fullName>
        <active>true</active>
        <label>Squad</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_WF_Sub_Campanas</fullName>
        <active>false</active>
        <label>Sub Campañas</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WB_Cam_RTG_Tlmktg</fullName>
        <active>true</active>
        <label>Outbound</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CRM_WF_Fecha_Fin_No_Menor_A_Fecha_Inicio</fullName>
        <active>false</active>
        <errorConditionFormula>StartDate  &gt;  EndDate</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>La fecha de fin no puede ser menor a la fecha de inicio.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WB_ActiveStartDate</fullName>
        <active>false</active>
        <description>Valida si la campaña esta activa, y de estar activa la fecha inicio no puede ser mayor al día de hoy</description>
        <errorConditionFormula>IF( AND(IsActive, StartDate &gt; TODAY(), RecordType.DeveloperName = &apos;MX_WB_Cam_RTG_Tlmktg&apos;), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>En una campaña activa la fecha no puede ser mayor al día de hoy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WB_StartDateNow</fullName>
        <active>false</active>
        <description>Valida que la fecha de inicio sea mayor o igual a hoy</description>
        <errorConditionFormula>IF(OR(AND(ISNEW(), NOT(ISCHANGED(IsActive)), RecordType.DeveloperName = &apos;MX_WB_Cam_RTG_Tlmktg&apos;, (OR(StartDate &lt; Today(),  EndDate &lt; StartDate))), IF(OR(AND(IsActive ,  ISCHANGED(StartDate), (OR(StartDate &lt; Today(),  EndDate &lt; StartDate))), AND(IsActive ,  ISCHANGED(EndDate), (EndDate &lt; StartDate))),true,false)),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>La fecha Inicial no puede ser menor al día actual ni mayor a la fecha fin</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Con_Criterios_es_obligatorio</fullName>
        <active>false</active>
        <description>Los squads distintos a Adquirencia deben de especificar si su campaña el campo Con Criterios</description>
        <errorConditionFormula>AND( ISBLANK ( TEXT( CRM_WF_Con_Criterios__c ) ),
     OR( RecordType.Name = &quot;Squad&quot;, RecordType.Name = &quot;Alianzas Comerciales&quot; ),
       NOT( ISPICKVAL(CRM_WF_Area_Solicitante__c, &quot;SQUAD_ADQUIRENCIA&quot;))
    )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Con_Criterios__c</errorDisplayField>
        <errorMessage>Debe especificar si la campaña requiere Criterios de I.C.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Con_Modelo_es_obligatorio</fullName>
        <active>false</active>
        <description>Los squads distintos a Adquirencia deben de especificar si su campaña el campo Con Modelo</description>
        <errorConditionFormula>AND( ISBLANK ( TEXT( CRM_WF_Con_Modelo__c ) ),
     OR( RecordType.Name = &quot;Squad&quot;, RecordType.Name = &quot;Alianzas Comerciales&quot; ),
     NOT( ISPICKVAL(CRM_WF_Area_Solicitante__c, &quot;SQUAD_ADQUIRENCIA&quot;))
    )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Con_Modelo__c</errorDisplayField>
        <errorMessage>Debe especificar si la campaña requiere Modelo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Criterios_Si</fullName>
        <active>false</active>
        <description>Regla de Validación que se activa para que el usuario especifique qué criterios se necesitan si especificaron que la campaña Sí requiere Criterios.</description>
        <errorConditionFormula>AND( ISPICKVAL( CRM_WF_Con_Criterios__c , &quot;Sí&quot;)  , ISBLANK( CRM_WF_Criterios_De_Ic__c ),  OR(RecordType.DeveloperName = &quot;CRM_WF_Alianzas_Comerciales&quot;,
RecordType.DeveloperName = &quot;CRM_WF_Implementacion&quot;,
RecordType.DeveloperName = &quot;CRM_WF_Campana_Multipromocion&quot;,
RecordType.DeveloperName = &quot;CRM_WF_No_Squad&quot;,
RecordType.DeveloperName = &quot;CRM_WF_Squad&quot;) )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Criterios_De_Ic__c</errorDisplayField>
        <errorMessage>Debes especificar qué criterios son los que se necesitan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Modelo_Si</fullName>
        <active>false</active>
        <description>Regla de Validación que se activa para que el usuario especifique qué Modelo se necesita si especificaron que la campaña Sí requiere Modelo.</description>
        <errorConditionFormula>AND( ISPICKVAL( CRM_WF_Con_Modelo__c , &quot;Sí&quot;) , ISBLANK( CRM_WF_Modelo__c ), OR(RecordType.DeveloperName = &quot;CRM_WF_Alianzas_Comerciales&quot;,
RecordType.DeveloperName = &quot;CRM_WF_Implementacion&quot;,
RecordType.DeveloperName = &quot;CRM_WF_Campana_Multipromocion&quot;,
RecordType.DeveloperName = &quot;CRM_WF_No_Squad&quot;,
RecordType.DeveloperName = &quot;CRM_WF_Squad&quot;) )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Modelo__c</errorDisplayField>
        <errorMessage>Debes especificar qué Modelo son los que se necesita.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Requiere_Brief_es_obligatorio</fullName>
        <active>false</active>
        <description>Los squads que no sean Adquirencia debe de especificar si su campaña requiere Brief</description>
        <errorConditionFormula>AND( ISBLANK( TEXT( CRM_WF_Requiere_Brief__c ) ),
     OR( RecordType.Name = &quot;Squad&quot;, RecordType.Name = &quot;Alianzas Comerciales&quot;),
     NOT( ISPICKVAL(CRM_WF_Area_Solicitante__c, &quot;SQUAD_ADQUIRENCIA&quot;))
    )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Requiere_Brief__c</errorDisplayField>
        <errorMessage>Debe especificar si la campaña requiere Brief</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Requiere_Carta_es_obligatorio</fullName>
        <active>false</active>
        <description>Los squads distintos a adquirencia deben de especificar si su campaña requiere Carta Origen</description>
        <errorConditionFormula>AND( ISBLANK( TEXT(  CRM_WF_Requiere_Carta_Origen__c ) ),
     OR( RecordType.Name = &quot;Squad&quot;, RecordType.Name = &quot;Alianzas Comerciales&quot;),
   NOT( ISPICKVAL(CRM_WF_Area_Solicitante__c, &quot;SQUAD_ADQUIRENCIA&quot;))
    )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Requiere_Carta_Origen__c</errorDisplayField>
        <errorMessage>Debe especificar si la campaña requiere Carta Origen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_WF_Requiere_vobo_Seguimiento_Es_Oblig</fullName>
        <active>false</active>
        <description>Los squads distintos a Adquirencia deben de especificar si su campaña requiere el VoBo de Seguimiento</description>
        <errorConditionFormula>AND( ISBLANK( TEXT(  CRM_WF_Con_VoBo_Seguimiento__c ) ),
     OR( RecordType.Name = &quot;Squad&quot;, RecordType.Name = &quot;Alianzas Comerciales&quot;),
     NOT( ISPICKVAL(CRM_WF_Area_Solicitante__c, &quot;SQUAD_ADQUIRENCIA&quot;))
    )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Con_VoBo_Seguimiento__c</errorDisplayField>
        <errorMessage>Debe especificar si la campaña requiere el VoBo de Seguimiento</errorMessage>
    </validationRules>
</CustomObject>